fix footer justify-content

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -33,6 +33,10 @@ footer {
   justify-content: space-between;
 }
 
+footer {
+  justify-content: flex-end;
+}
+
 #mobile-menu {
   font-size: 1.5rem;
   opacity: .75;
