--- a/styles/main.scss
+++ b/styles/main.scss
@@ -300,4 +300,119 @@ section {
   line-height: 1.5;
 }
 
+#list-posts {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 5rem;
+  column-gap: 2rem;
+
+  .post {
+    width: calc((100% - 2rem) / 2);
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    transition: .5s filter ease;
+    filter: grayscale(1);
+
+    &:hover {
+      filter: grayscale(0);
+    }
+
+    &:nth-child(3n+3) {
+      width: 100%;
+      flex-direction: row;
+      align-items: center;
+
+      .post-image {
+        margin: 0;
+        max-width: calc((100% - 2rem) / 2);
+      }
+
+      .post-detail {
+        padding: 0 2rem;
+      }
+    }
+
+    .post-image {
+      width: 100%;
+      height: 300px;
+      overflow: hidden;
+      margin-bottom: 1rem;
+
+      &:hover {
+        img {
+          transform: scale(1.1);
+        }
+      }
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        transition: .5s all ease;
+      }
+    }
+
+    .post-detail {
+      display: flex;
+      flex-direction: column;
+      row-gap: 1rem;
+      flex: 1;
+
+      .post-time {
+        font-size: .8rem;
+        color: #aaa
+      }
+
+      .post-title {
+        color: rgb(var(--color));
+        text-decoration: none;
+        transition: .5s all ease;
+        line-height: 1.35;
+        position: relative;
+        margin-bottom: 1rem;
+
+        &::before {
+          content: '';
+          width: 35px;
+          height: 3px;
+          background-color: rgb(var(--main-color));
+          position: absolute;
+          bottom: -1rem;
+          left: 0;
+        }
+
+        &:hover {
+          color: rgb(var(--main-color));
+        }
+
+        h2 {
+          margin: 0;
+        }
+      }
+
+      .post-summary {
+        color: #aaa;
+        line-height: 1.35;
+      }
+
+      .post-categories {
+        margin-top: auto;
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        column-gap: .5rem;
+        row-gap: .5rem;
+
+        .category {
+          font-size: .8rem;
+          background-color: #eee;
+          padding: .35rem .7rem;
+        }
+      }
+    }
+  }
+}
+
 @import 'responsive'
