--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -3,8 +3,22 @@
 :root {
   --font: 'Poppins';
   --second-font: 'Inter';
-  --main-color: 32, 215, 96;
-  --background: 32, 215, 96;
+
+  --primary: 32, 215, 96;
+  --background: 247, 247, 247;
   --dark: 13, 18, 22;
-  --color: 13, 18, 22
+  --color: 13, 18, 22;
+
+  --success: 90, 192, 143;
+  --danger: 250, 99, 34;
+  --warning: 250, 189, 34;
+  --info: 95, 150, 233;
 }
+
+$colors: (
+  'primary',
+  'success',
+  'danger',
+  'warning',
+  'info',
+  'dark')
