--- a/styles/_responsive.scss
+++ b/styles/_responsive.scss
@@ -8,7 +8,6 @@
   header {
     padding: 0 35px;
     margin-bottom: 2.5rem;
-    border-bottom: 1px solid rgba(#ddd, .5);
 
     #logo {
       h1 {
@@ -27,7 +26,6 @@
 
   footer {
     justify-content: center;
-    border-top: 1px solid rgba(#ddd, .5);
     margin-top: 2.5rem;
   }
 
@@ -64,6 +62,27 @@
 
       strong {
         margin-top: .5rem;
+      }
+    }
+  }
+
+  #list-posts {
+    row-gap: 3rem;
+
+    .post {
+      width: 100%;
+
+      &:nth-child(5n+5) {
+        flex-direction: column;
+
+        .post-detail {
+          padding: 0;
+        }
+
+        .post-image {
+          max-width: unset;
+          margin-bottom: 1rem;
+        }
       }
     }
   }
