--- a/styles/main.scss
+++ b/styles/main.scss
@@ -450,6 +450,21 @@ section {
       }
     }
 
+    .edit-button {
+      position: absolute;
+      top: 1rem;
+      right: 1rem;
+      background-color: rgb(var(--danger));
+      color: #fff;
+      padding: .5rem 1rem;
+      text-decoration: none;
+      transition: .5s transform ease;
+
+      &:hover {
+        transform: scale(1.2);
+      }
+    }
+
     .post-time {
       position: absolute;
       right: 1rem;
@@ -554,7 +569,6 @@ table {
 
     td,
     th {
-      overflow: hidden;
       padding: 0 1rem;
       border: 1px solid #eee;
       text-align: left;
@@ -601,7 +615,152 @@ table {
   }
 }
 
+.editor-container {
+  section {
+    &+section {
+      margin-top: 0 !important
+    }
+  }
+}
 
+#gallery-wrapper {
+  width: 100%;
+
+  #selected-image {
+    width: min-content;
+    height: 250px;
+    border: 1px solid #ddd;
+    position: relative;
+    overflow: hidden;
+
+    img {
+      height: 100%;
+    }
+
+    #show-modal {
+      width: 30px;
+      height: 30px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position: absolute;
+      top: 1rem;
+      right: 1rem;
+      background-color: rgb(var(--primary));
+      color: #fff;
+      cursor: pointer
+    }
+  }
+}
+
+#upload-modal-wrapper {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 101;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  #upload-modal {
+    width: 80vw;
+    height: 80vh;
+    max-height: 80vh;
+    overflow-y: auto;
+    background-color: #fff;
+    box-shadow: 0 0 2rem rgba(var(--dark), .125);
+    padding: 2rem;
+    box-sizing: border-box;
+
+    #list-images {
+      display: flex;
+      flex-wrap: wrap;
+      column-gap: 1rem;
+      row-gap: 1rem;
+
+      .image {
+        width: calc((100% - 4rem) / 5);
+        border: 1px solid rgba(var(--dark), .2);
+
+        &:hover {
+          border-color: rgb(var(--primary));
+
+          .image-footer {
+            background-color: rgb(var(--primary));
+            color: #fff;
+          }
+        }
+
+        img {
+          width: 100%;
+          display: block;
+        }
+
+        .image-footer {
+          width: 100%;
+          height: 30px;
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          padding: 0 .5rem;
+          column-gap: 1rem;
+          box-sizing: border-box;
+          background-color: rgba(var(--dark), .2);
+          font-size: .75rem;
+
+          .copy {
+            cursor: pointer;
+          }
+        }
+      }
+    }
+  }
+}
+
+.hide-scroll {
+  overflow: hidden;
+
+  #admin-content {
+    overflow: hidden;
+  }
+}
+
+.overlay {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(var(--dark), .5);
+  z-index: 100;
+  position: fixed;
+  top: 0;
+  left: 0;
+  cursor: pointer;
+}
+
+.image-preview {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  &:hover {
+    img {
+      display: block;
+    }
+  }
+
+  img {
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    width: 150px;
+    border: 4px solid rgb(var(--primary));
+    display: none;
+    z-index: 10;
+    box-shadow: 0 0 1rem rgba(var(--dark), .1)
+  }
+}
 
 @import 'responsive';
 
